Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Clean 'status_history' from portal_actions. See changes in getCPSDocuments and
  the closing commentary of bug #295 for what changed.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Replaced TABLESs and DIVs by DL/DT/DD in advanced search form; code much
  cleaner and base tests for prefilling chosen values when redisplaying this
  form (TODO).